[gd_scene load_steps=4 format=3 uid="uid://g6k0sppp68kd"]

[ext_resource type="Theme" uid="uid://cjkxmykcwsi3e" path="res://Default.tres" id="1_20ry1"]
[ext_resource type="Script" path="res://UI/ItemButton.gd" id="2_4b71u"]
[ext_resource type="PackedScene" uid="uid://c47sr7qr7j7hk" path="res://Music/SoundPlayer.tscn" id="3_q0hy8"]

[node name="Button" type="Button"]
custom_minimum_size = Vector2(352, 128)
offset_right = 352.0
offset_bottom = 128.0
focus_mode = 0
theme = ExtResource("1_20ry1")
script = ExtResource("2_4b71u")

[node name="SoundPlayer" parent="." instance=ExtResource("3_q0hy8")]

[node name="Sprite" type="TextureRect" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 120.0
offset_bottom = 120.0
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 128.0
offset_top = 8.0
offset_right = 320.0
offset_bottom = 32.0

[node name="Name" type="Label" parent="HBoxContainer"]
light_mask = 2
visibility_layer = 2
layout_mode = 2

[node name="Cost" type="Label" parent="HBoxContainer"]
light_mask = 2
visibility_layer = 2
layout_mode = 2

[node name="Description" type="RichTextLabel" parent="."]
light_mask = 2
visibility_layer = 2
layout_mode = 0
offset_left = 128.0
offset_top = 32.0
offset_right = 320.0
offset_bottom = 112.0
mouse_filter = 2
text = "Powered by a fragment of a dwarf star. Super charges your weapon. Increases projectile speed and fire-rate"
fit_content = true

[node name="SoldOut" type="Panel" parent="."]
visible = false
layout_mode = 0
offset_left = 72.0
offset_top = 56.0
offset_right = 241.0
offset_bottom = 124.0
rotation = -0.276202
mouse_filter = 2

[node name="Label" type="Label" parent="SoldOut"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 32
text = "Sold Out"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="button_down" from="." to="." method="_on_button_down"]
